# Golden-env

./: .dockerignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  task_graders.py
golden_hour_dispatch_env/: __init__.py  client.py  graders.py  models.py  simulator.py  task_bank.py
golden_hour_dispatch_env/server/: __init__.py  app.py  dashboard.py  dispatch_environment.py
outputs/: baseline_scores.json  baseline_scores_heuristic.json  baseline_scores_llm.json
server/: app.py
tests/: test_env_smoke.py
